--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,16 @@
+#LOGGING
 logging.level.org.springframework=WARN
 logging.level.org.springframework.web.client=DEBUG
 logging.level.org.hibernate=WARN
 logging.level.com.zaxxer.hikari=WARN
 
+#LIQUIBASE
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.json
 
+#JPA
 spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost/perrosygatos
+spring.datasource.username=perrosygatos
+spring.datasource.password=perrosygatos
 
 
