--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #LOGGING
+logging.level.com.perrosygatos=TRACE
 logging.level.org.springframework=WARN
 logging.level.org.springframework.web.client=DEBUG
 logging.level.org.hibernate=WARN
