--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,11 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost/perrosygatos
 spring.datasource.username=perrosygatos
 spring.datasource.password=perrosygatos
+#AWS
+cloud.aws.credentials.accessKey=AKIAJZJNXTCNPERGWFUQ
+cloud.aws.credentials.secretKey=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
+cloud.aws.region.static=us-west-1
+com.perrosygatos.s3-bucket-base-url=https://s3-us-west-1.amazonaws.com/perrosygatos-test/
+com.perrosygatos.s3-bucket-name=perrosygatos-test
 
 
