--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,9 @@ logging.level.liquibase=WARN
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.json
 #JPA
 spring.jpa.show-sql=true
+#AWS
+cloud.aws.credentials.accessKey=xxxxxxxxxxxxxxxxxxx
+cloud.aws.credentials.secretKey=ixxxxxxxxxxxxxxxxxxxxxxx
+cloud.aws.region.static=us-west-1
+com.perrosygatos.s3-bucket-base-url=https://s3-us-west-1.amazonaws.com/perrosygatos-test/
+com.perrosygatos.s3-bucket-name=perrosygatos-test
